Changed Project name to Landroval
Finally.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Robot2016Final</name>
+	<name>Landroval</name>
 	<comment></comment>
 	<projects>
 	</projects>
